code/examples/stderr/misc_5.stderr
error[E0782]: expected a type, found a trait
 --> examples/misc_5.rs:8:5
  |
8 |     Sub::assoc()
  |     ^^^
  |
help: you can add the `dyn` keyword if you want a trait object
  |
8 |     <dyn Sub>::assoc()
  |     ++++    +

For more information about this error, try `rustc --explain E0782`.
error: could not compile `code` (example "misc_5") due to 1 previous error
